# name: test_snapshot[Andrew_Huang_-_Know_You.rdzip]
  dict({
    'artist': 'Andrew Huang',
    'artist_tokens': list([
      'Andrew Huang',
    ]),
    'authors': list([
      'lugi',
    ]),
    'description': 'Two lonely stars, wandering in the dark...',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 42,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.47,
    'id': 'know-you-2zRJRCjPqJx',
    'last_updated': datetime.datetime(2020, 6, 24, 15, 6, 48),
    'max_bpm': 78.5,
    'min_bpm': 78.5,
    'rdlevel_sha1': 'b0296f2c23f02f19a2b3ff3aa5d48219a1cdbcb3',
    'seizure_warning': False,
    'sha1': 'bca6d99b3fd9dd4af8eedb530cb0d194bfaab7fe',
    'single_player': True,
    'song': 'Know You',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 8,
      }),
    ]),
    'tags': list([
      'slow',
      'pop',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[Hot_Freaks_-_Pull.rdzip]
  dict({
    'artist': 'Hot Freaks',
    'artist_tokens': list([
      'Hot Freaks',
    ]),
    'authors': list([
      'Labyrinth',
    ]),
    'description': "It's not something easy to admit.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 33,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.88,
    'id': 'pull-EpgEYcGYPnU',
    'last_updated': datetime.datetime(2022, 6, 16, 0, 8, 26),
    'max_bpm': 89,
    'min_bpm': 88,
    'rdlevel_sha1': '893d958d5745b9e548bfef61bda1399d363953dd',
    'seizure_warning': False,
    'sha1': '767a60b5ab9381541478b5f814f0a8938b325b89',
    'single_player': True,
    'song': 'Pull',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 4,
      }),
    ]),
    'tags': list([
      '1p',
      '2p',
      'gimmick',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[JustMe_-_Swing.rdzip]
  dict({
    'artist': 'JustMe',
    'artist_tokens': list([
      'JustMe',
    ]),
    'authors': list([
      'Xeno',
    ]),
    'description': "Printin' twang.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 15,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.08,
    'id': 'swing-c2QGYcw8GLq',
    'last_updated': datetime.datetime(2020, 12, 1, 18, 30, 20),
    'max_bpm': 130,
    'min_bpm': 130,
    'rdlevel_sha1': '8c27a0d002340c6274593825639ca3c2b725c131',
    'seizure_warning': False,
    'sha1': 'c4d48b3bb5b99589f486722e4ef48c8cbc053c92',
    'single_player': True,
    'song': 'Swing',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 5,
      }),
    ]),
    'tags': list([
      'Printing',
      'CMYK',
      'Swing',
      'Bounce',
      'syncopation',
      'gimmick',
      '1p',
      '2p',
      'XenOnly',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[Masssive_New_Krew_-_Sol_e_Mar.rdzip]
  dict({
    'artist': 'Masssive New Krew',
    'artist_tokens': list([
      'Masssive New Krew',
    ]),
    'authors': list([
      'Lyco',
    ]),
    'description': 'A new patient seems to have come in- Nevermind forget i said that he is an emergency case get here quick!',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 105,
      }),
    ]),
    'difficulty': 3,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': True,
    'has_window_dance': False,
    'hue': 0.92,
    'id': 'sol-e-ma-dVMtiNt856v',
    'last_updated': datetime.datetime(2021, 8, 21, 12, 15, 10),
    'max_bpm': 150,
    'min_bpm': 150,
    'rdlevel_sha1': 'ca72907847f34087e10d1e8bb62e241d0b152e4a',
    'seizure_warning': False,
    'sha1': '113935f95b4beca84c8e80893df8efbdd4acc8ab',
    'single_player': True,
    'song': 'Sol e Mar',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 9,
      }),
    ]),
    'tags': list([
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[Pseuu_-_ennui.rdzip]
  dict({
    'artist': 'Pseuu',
    'artist_tokens': list([
      'Pseuu',
    ]),
    'authors': list([
      'Pseuu',
    ]),
    'description': '''
      uh... no comment. level made in about 3-4 working hours
      
      - tricky oneshot patterns
      - skipshots
      - holds
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 102,
      }),
    ]),
    'difficulty': 2,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': True,
    'has_oneshots': True,
    'has_skipshots': True,
    'has_squareshots': False,
    'has_window_dance': True,
    'hue': 0.42,
    'id': 'ennui-og-3VFE7LSmzSo',
    'last_updated': datetime.datetime(2022, 1, 3, 23, 19, 26),
    'max_bpm': 126,
    'min_bpm': 126,
    'rdlevel_sha1': 'a721f4e2569337e6096dcb4b1bc6761632e259da',
    'seizure_warning': False,
    'sha1': 'efe31be4ea55a583fcbe2230dbdbd00f98affe63',
    'single_player': True,
    'song': 'ennui.ogg',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 9,
      }),
    ]),
    'tags': list([
      'chiptune',
      'short',
      '2p',
      'oneshots',
      'skipshots',
      'holds',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[Quree_-_One_Forgotten_Night.rdzip]
  dict({
    'artist': 'Quree',
    'artist_tokens': list([
      'Quree',
    ]),
    'authors': list([
      'BluPen',
    ]),
    'description': "Patient experiencing sudden heart strain again. Solve the patient's concerns.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 77,
      }),
    ]),
    'difficulty': 2,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': True,
    'hue': 0.1,
    'id': 'one-forg-LJfg3wQANR7',
    'last_updated': datetime.datetime(2021, 5, 20, 21, 9, 22),
    'max_bpm': 173,
    'min_bpm': 100,
    'rdlevel_sha1': '41e55ab2dc023ab842114f48a97bc901f99a36c2',
    'seizure_warning': False,
    'sha1': '52ac2e6c384d3a0f01257571d794a240fe6d123e',
    'single_player': True,
    'song': 'One Forgotten Night',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'quree',
      'window dance',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[Samario (Making A Mistake) - One Uncued Tresillo.rdzip]
  dict({
    'artist': 'Samario (Making A Mistake)',
    'artist_tokens': list([
      'Samario',
    ]),
    'authors': list([
      'Samario (Making A Mistake)',
    ]),
    'description': '''
      One Uncued Tresillo
      (song edited from [...]Machinegun Psystyle[...], by Camellia)
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 81,
      }),
    ]),
    'difficulty': 0,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0,
    'id': 'one-uncu-i64TVVfB93P',
    'last_updated': datetime.datetime(2022, 6, 27, 21, 27, 12),
    'max_bpm': 70,
    'min_bpm': 40,
    'rdlevel_sha1': 'c5b03e74dc6aa055fefc56933c3596803b55e171',
    'seizure_warning': False,
    'sha1': 'f9b524bd511cf867c8c580847a7eaaf4c8a7c9f2',
    'single_player': True,
    'song': 'One Uncued Tresillo',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'uncued tresillo',
      'samario please stop doing this',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[Samario_Making_A_Mistake_-_One_Uncued_Tresillo orig.rdzip]
  dict({
    'artist': 'Samario (Making A Mistake)',
    'artist_tokens': list([
      'Samario (Making A Mistake)',
    ]),
    'authors': list([
      'Samario (Making A Mistake)',
    ]),
    'description': '''
      One Uncued Tresillo
      (song edited from [...]Machinegun Psystyle[...], by Camellia)
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 81,
      }),
    ]),
    'difficulty': 0,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0,
    'id': 'one-uncu-eqSkB1ZX7Xz',
    'last_updated': datetime.datetime(2021, 1, 2, 3, 52, 10),
    'max_bpm': 160,
    'min_bpm': 160,
    'rdlevel_sha1': '5c1eaa07f8cc3216446cc4d79c84a722d39c9e47',
    'seizure_warning': False,
    'sha1': 'a9a522aea24b1c9354b509da2bacdabc95d535e9',
    'single_player': True,
    'song': 'One Uncued Tresillo',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'uncued tresillo',
      'samario please stop doing this',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[auburnsummer - Triplet Testaaaaa.rdzip]
  dict({
    'artist': 'auburnsummer',
    'artist_tokens': list([
      'auburnsummer',
    ]),
    'authors': list([
      'auburnsummer',
      ' Xeno',
    ]),
    'description': 'A two-handed level. The eloquent blend between thirds and halves.',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 65,
      }),
    ]),
    'difficulty': 2,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': True,
    'has_window_dance': False,
    'hue': 0.66,
    'id': 'triplet-LrxHzPMLamy',
    'last_updated': datetime.datetime(2022, 6, 27, 23, 25, 28),
    'max_bpm': 110,
    'min_bpm': 110,
    'rdlevel_sha1': '333e8337033bd01e6d99025503bbe0be1a75c171',
    'seizure_warning': False,
    'sha1': 'd1f0c475dc0f560a92557af48c75d36e15d4816f',
    'single_player': True,
    'song': 'Triplet Test',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 12,
      }),
    ]),
    'tags': list([
      'Piano',
      '2p',
      'Two-handed',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[color-ff-XsSFVSBp2hH.rdzip]
  dict({
    'artist': '遊助',
    'artist_tokens': list([
      '遊助',
    ]),
    'authors': list([
      '来因洛特',
    ]),
    'description': '这次的这个谱我真的花了很长时间，大概有......差不多50个小时吧。歌词因为是CC，只能全用平假名了，看起来麻烦也抱歉了...希望这次能取得比上次更好的结果吧。来来回回也看了很多次，感觉想不到有什么能加的了，就这样交了吧。也希望你也能像歌词一样开开心心的，活着本身没有意义，但就是为了知道是为了什么我们才会活着呀。（录的时候请把轨道分成八行）',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 172,
      }),
    ]),
    'difficulty': 0,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.17,
    'id': 'color-ff-XsSFVSBp2hH',
    'last_updated': datetime.datetime(2022, 8, 25, 22, 29, 56),
    'max_bpm': 138,
    'min_bpm': 138,
    'rdlevel_sha1': '847389cd125dbc3a33e62f5071f725db72460fbe',
    'seizure_warning': True,
    'sha1': '2d3169e476eb89085dfc7829fbe5ec55ee23a745',
    'single_player': True,
    'song': '''
      一笑懸命
    ''',
    'song_ct': list([
      dict({
        'color': '#FF7C8A',
        'len': 1,
      }),
      dict({
        'color': '#FECD66',
        'len': 1,
      }),
      dict({
        'color': '#C3F3FD',
        'len': 1,
      }),
      dict({
        'color': '#FFA3D6',
        'len': 1,
      }),
      dict({
        'color': 'default',
        'len': 1,
      }),
    ]),
    'tags': list([
      'easy',
      'CNcompo 1',
      'relaxing',
      'lyrics',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[placeboing_-_BANAS.rdzip]
  dict({
    'artist': 'placeboing',
    'artist_tokens': list([
      'placeboing',
    ]),
    'authors': list([
      "April's Only Fool",
    ]),
    'description': '''
      This level works under the assumption that you know how 8beat, 6beat, and Temporal Shift works.
      
      Hope you all have a wonderful April Fools Day!
      
      Hollaback Girl by Gwen Stefani x Donkey Kong Country 2 OST
      
      Banana CC by Pyre
      Banana Tile by Het
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 241,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': True,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.17,
    'id': 'banas-QbMoyaG2nfK',
    'last_updated': datetime.datetime(2022, 4, 9, 16, 40, 34),
    'max_bpm': 147,
    'min_bpm': 143.5,
    'rdlevel_sha1': '7d310919307cc3c95c893415a3bc575321ea7d36',
    'seizure_warning': False,
    'sha1': 'b25d108c54a36e6c15bce9d140c650a8c93ff591',
    'single_player': True,
    'song': 'BANAS',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 5,
      }),
    ]),
    'tags': list([
      'April Fools',
      'banana',
      'banas',
      'temporal shift',
      '8beat',
      '6beat',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[toonlink_Kenichi_Nishikami_Takeru_Kanazaki_-_Jimmys_Aesthetics.rdzip]
  dict({
    'artist': 'toonlink, Kenichi Nishikami, Takeru Kanazaki',
    'artist_tokens': list([
      'toonlink',
      'Kenichi Nishikami',
      'Takeru Kanazaki',
    ]),
    'authors': list([
      'Szprycha',
    ]),
    'description': 'A neat song from WarioWare DIY',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 30,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.19,
    'id': 'jimmy-s-Ccby1RK3XJK',
    'last_updated': datetime.datetime(2020, 6, 20, 23, 9, 28),
    'max_bpm': 125,
    'min_bpm': 125,
    'rdlevel_sha1': '00bd2014b924355e937c3d43e9c7bc4442c2e447',
    'seizure_warning': False,
    'sha1': 'b444395282875d2b1d8b6aae1f907f2110d30d51',
    'single_player': True,
    'song': "Jimmy's Aesthetics",
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 18,
      }),
    ]),
    'tags': list([
      'siivagunner',
      'nintendo',
      'warioware',
      'body rock',
    ]),
    'two_player': False,
  })
# ---
